# ed-timelapse

./: CHANGELOG.md  Cargo.toml  README.md  eframe_template-c0f31408c61bda52.js  eframe_template-c0f31408c61bda52_bg.wasm  index.html
.github/workflows/: rust.yml
src/: app.rs  lib.rs  main.rs  screenshot.rs  timelapse.rs
src/screenshot/: request.rs  watch.rs
