[package]
name = "ed-timelapse"
version = "0.1.0"
authors = ["Pierre Lulé <pierre@lule.fr>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
env_logger = "0.11.3"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.86"
ed-journals = "0.2.0"
windows = { version = "0.56.0", features = [
    "Win32",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
directories = "5.0.1"
chrono = "0.4.38"
egui_logger = "0.4.4"
image = "0.25.1"
open = "5.1.3"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
